tests/ui/impl-trait/variance.old.stderr
error: ['a: *]
  --> $DIR/variance.rs:13:36
   |
LL | fn not_captured_early<'a: 'a>() -> impl Sized {}
   |                                    ^^^^^^^^^^

error: ['a: *, 'a: o]
  --> $DIR/variance.rs:18:32
   |
LL | fn captured_early<'a: 'a>() -> impl Sized + Captures<'a> {}
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^

error: []
  --> $DIR/variance.rs:20:40
   |
LL | fn not_captured_late<'a>(_: &'a ()) -> impl Sized {}
   |                                        ^^^^^^^^^^

error: ['a: o]
  --> $DIR/variance.rs:25:36
   |
LL | fn captured_late<'a>(_: &'a ()) -> impl Sized + Captures<'a> {}
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

